--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>salati</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="node_modules/axios/dist/axios.min.js"></script>
+    <!--<script src="node_modules/axios/dist/axios.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
